# meetvoorbeeld

./: .env  Cargo.toml
assets/: main.js
src/: main.rs  sensor_reading.rs
templates/: base.html  changeroc.html  index.html  message.html  trial.html
