[package]
name = "sensor_reading_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
actix-web = "4"
actix-files = "0.6.2"
actix-rt = "2.9.0"
tera = "1.5.0"
lazy_static = "1.4.0"

